# django-userena-ce

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  AUTHORS  CREDITS  HISTORY.md  Makefile  README.md  UPDATES.md  commands.html  faq.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements_dev.txt  requirements_docs.txt  search.html  searchindex.js  settings.html  setup.cfg  setup.py  signals.html  tox.ini
.github/workflows/: ci.yml  release.yml  tox-tests.yml
_sources/: faq.rst.txt  index.rst.txt  settings.rst.txt
_sources/api/: index.rst.txt  models.rst.txt  utils.rst.txt  views.rst.txt
_static/: documentation_options.js
api/: backends.html  decorators.html  forms.html  index.html  managers.html  middleware.html  models.html  utils.html  views.html
contrib/umessages/: index.html
contrib/umessages/api/: index.html  managers.html  views.html
demo/: manage.py  requirements.txt  wsgi.py
demo/demo/: settings.py  urls.py  wsgi.py
demo/demo/static/css/: master.css  reset.css
demo/demo/templates/: 500.html  base.html
demo/demo/templates/static/: promo.html
demo/locale/nl/LC_MESSAGES/: django.mo  django.po
demo/profiles/: forms.py  models.py  views.py
demo/profiles/migrations/: 0001_initial.py
docs/: conf.py  faq.rst  index.rst  installation.rst  settings.rst
docs/api/: utils.rst
docs/contrib/umessages/: index.rst
docs/contrib/umessages/api/: index.rst
userena/: __init__.py  admin.py  apps.py  backends.py  compat.py  decorators.py  forms.py  mail.py  managers.py  middleware.py  models.py  settings.py  signals.py  urls.py  utils.py  views.py
userena/contrib/umessages/: admin.py  fields.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
userena/contrib/umessages/migrations/: 0001_initial.py
userena/contrib/umessages/south_migrations/: 0001_initial.py
userena/contrib/umessages/templates/: base.html
userena/contrib/umessages/templates/umessages/: message_detail.html  message_form.html  message_list.html
userena/contrib/umessages/templatetags/: umessages_tags.py
userena/contrib/umessages/tests/: test_fields.py  test_forms.py  test_managers.py  test_models.py  test_views.py
userena/fixtures/: profiles.json  users.json
userena/locale/ar/LC_MESSAGES/: django.mo  django.po
userena/locale/cs/LC_MESSAGES/: django.mo  django.po
userena/locale/el/LC_MESSAGES/: django.po
userena/locale/nb/LC_MESSAGES/: django.po
userena/locale/tr/LC_MESSAGES/: django.po
userena/management/commands/: check_permissions.py  clean_expired.py
userena/migrations/: 0001_initial.py  0002_auto_20171130_0921.py
userena/runtests/: runtests.py  settings.py  urls.py
userena/south_migrations/: 0001_initial.py
userena/templates/userena/: activate_fail.html  activate_form.html  activate_pending.html  activate_retry.html  activate_retry_success.html  activation_pending.html  activiation_pending.html  disabled.html  email_change_complete.html  email_confirm_complete.html  email_confirm_fail.html  email_form.html  password_complete.html  password_form.html  password_reset_complete.html  password_reset_confirm_form.html  password_reset_done.html  password_reset_form.html  profile_detail.html  profile_form.html  profile_list.html  signin_form.html  signout.html  signup_complete.html  signup_form.html
userena/templates/userena/emails/: activation_email_message.html  confirmation_email_message_new.html  confirmation_email_message_old.html  confirmation_email_subject_new.html  confirmation_email_subject_new.txt  confirmation_email_subject_old.txt  password_reset_message.html
userena/tests/: test_backends.py  test_commands.py  test_migrations.py  test_privacy.py  tests_decorators.py  tests_forms.py  tests_managers.py  tests_middleware.py  tests_models.py  tests_urls.py  tests_utils.py  tests_views.py
userena/tests/profiles/: models.py
