[project]
authors = [
    {name = "James Meakin"},
]
license = {text = "BSD-3-Clause"}
requires-python = "<4.0,>=3.8"
dependencies = [
    "easy-thumbnails",
    "django-guardian>=2.0",
    "html2text",
    "Django>=3.2",
]
name = "django-userena-ce"
version = "8.0.0"
description = "Complete user management application for Django [DEPRECATED]"
readme = "README.md"
classifiers = [
    "Development Status :: 7 - Inactive",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[project.urls]
repository = "https://github.com/django-userena-ce/django-userena-ce"

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "coveralls",
    "sphinx",
]

[tool.isort]
profile = "black"
known_first_party = ["userena"]
line_length = 79

[tool.black]
line-length = 79
target-version = ["py38"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "userena.runtests.settings"
minversion = "6.0"
testpaths = [
    "userena/tests",
    "userena/contrib/umessages/tests",
]
python_files = "tests.py test_*.py *_tests.py tests_*.py"
addopts = "--strict-markers --showlocals"
markers = []
filterwarnings = [
    "ignore:django-userena-ce is deprecated:DeprecationWarning",
]
